# genetic_codes

./: .gitignore  .pylintrc  CMakeLists.txt  Makefile  README.md  build_notes.md  citation.cff  pyproject.toml  setup.py
.github/workflows/: python-package.yml  python-publish.yml  wheels.yml
codes/: ncbi.json  ncbi_tables.txt
examples/: average_translation_length.py  translate_a_sequence.py  translate_one_sequence.py  translate_sequence_in_all_frames.py
examples/example_lib/: __init__.py  read_fasta.py  stats.py
pygenetic_code/: Error.py  __init__.py  cli.py  code_to_table.py  dna_and_rna.py  encode_codons.py  error.py  genetic_code.py  ncbi_table_to_json.py  print_codes.py  translate.py  translations.py  version.py
src/: CMakeLists.txt  colours.h  error.c  error.h  get_orfs.c  get_orfs.h  kseq.h  pygenetic_code.c  pygenetic_code.h  seqs_to_ints.c  seqs_to_ints.h  translate.c  translate.h
tests/: seq.fasta  test_code_to_table.py  test_codes.py  test_codons_to_translation_tables.py  test_dna_to_rna.py  test_translations.py
