[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "pygenetic_code"
version = "0.21.3"
authors = [
  {name = "Rob Edwards", email = "raedwards@gmail.com"}
]
maintainers = [
  {name = "Rob Edwards", email = "raedwards@gmail.com"}
]

description = "Translate DNA sequences to protein sequences using different genetic codes and translation tables"
readme = "README.md"
classifiers =  [
    "Environment :: Console",
    "Environment :: MacOS X",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]

[project.urls]
GitHub = "https://github.com/linsalrob/genetic_codes/"

[project.scripts]
pygenetic_code = "pygenetic_code.cli:run"

[[tool.scikit-build.generate]]
path = "pygenetic_code/_version.py"
template = '''
version = "${version}"
'''

[tool.cibuildwheel]
# Build for CPython 3.10, 3.11, and 3.12
build = "cp3{10,11,12}-*"
# Skip musllinux builds (only build manylinux)
skip = "*-musllinux_*"

[tool.cibuildwheel.linux]
# Use manylinux_2_28 image for x86_64 (AlmaLinux 8 based, avoiding EOL CentOS 7)
manylinux-x86_64-image = "manylinux_2_28"
# Limit to x86_64 architecture
archs = ["x86_64"]
# Install build dependencies (zlib is needed for the C extension)
before-all = "dnf install -y zlib-devel"
# Run tests after building
test-requires = "pytest"
test-command = "pytest {project}/tests/"



